# 42-a-maze-ing

./: .flake8  .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  dummy_gen.py  mazegen_ekypraio_lmatthes-1.0.0-py3-none-any.whl  pyproject.toml  requirements.txt  test_42.py
core/: config_parser.py  output_writer.py
display/: curses_display.py  terminal.py
mazegen/: generator.py  generator2.py
