[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "0.1.0"
description = "A-maze-ing: Ein modularer Labyrinth-Generator für das 42 Projekt."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Dein Name", email = "deine.email@example.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]